infrastructure/kubernetes/base/analytics-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: analytics-service
