infrastructure/kubernetes/base/order-force-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: order-service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
    - port: 80
      targetPort: 8084
  selector:
    app: order-service
